HELIO-3200 - adjustments for mobile display - platform wide fixes for list view issue with responsive covers

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1466,6 +1466,10 @@ footer.press {
     }
   }
 
+  div.facets h3 {
+    font-size: 1.2em;
+  }
+
   .monograph .monograph-assets-toc-epub {
     a.toc-link {
       max-width: 65%;
